--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "simplex-noise": "^4.0.3",
     "three": "^0.168.0",
     "web-vitals": "^2.1.4"
   },
